--- a/index.html
+++ b/index.html
@@ -50,17 +50,25 @@
                                 <p style="font-size: 20px; font-weight: lighter; line-height: 2.5;">
                                     I'm passionate about creating great products by combining ux, business and
                                     technology. You can view my
-                                    <a href="playground.html" class="alink"><b>⚽ Playground</b></a>
+                                    <a href="playground.html" class="alink loud-link-hover" data-sound="button3">
+                                        <b>⚽ Playground</b>
+                                    </a>
                                     , find me on
                                     <a
                                         href="https://www.linkedin.com/in/qiu-william-jin-405929168/"
                                         target="_blank"
-                                        class="alink"
+                                        class="alink loud-link-hover"
+                                        data-sound="button3"
                                     >
                                         <b>👔 LinkedIn</b>
                                     </a>
                                     , or just send me an
-                                    <a target="_blank" href="mailto:qiuj@andrew.cmu.edu" class="alink">
+                                    <a
+                                        target="_blank"
+                                        href="mailto:qiuj@andrew.cmu.edu"
+                                        class="alink loud-link-hover"
+                                        data-sound="button3"
+                                    >
                                         <b>📧 Email</b>
                                     </a>
                                     .
@@ -70,8 +78,9 @@
                             <a
                                 target="_blank"
                                 href="./pdfs/resume.pdf"
-                                class="resume button button__primary"
+                                class="resume button button__primary loud-link-hover"
                                 style="letter-spacing: 1px;"
+                                data-sound="button2"
                             >
                                 📝 My Resume
                             </a>
@@ -115,7 +124,7 @@
                     </div>
 
                     <div class="expanded__media" style="width: 60%;">
-                        <a href="tiny.html">
+                        <a href="tiny.html" class="loud-link-hover" data-sound="button2">
                             <img
                                 class="landing_img"
                                 src="./images/Tiny/title.png"
@@ -137,7 +146,7 @@
                     </div>
 
                     <div class="expanded__media">
-                        <a href="Quenews.html">
+                        <a href="Quenews.html" class="loud-link-hover" data-sound="button2">
                             <img class="landing_img" src="./images/Quenews/Queue_Mockup.png" width="70%" />
                         </a>
                     </div>
@@ -159,7 +168,7 @@
                     </div>
 
                     <div class="expanded__media">
-                        <a href="IBM.html">
+                        <a href="IBM.html" class="loud-link-hover" data-sound="button2">
                             <img
                                 class="landing_img"
                                 src="./images/IBM/0.png"
@@ -184,7 +193,7 @@
                     </div>
 
                     <div class="expanded__media">
-                        <a href="Pianooooo.html">
+                        <a href="Pianooooo.html" class="loud-link-hover" data-sound="button2">
                             <img
                                 class="landing_img"
                                 src="./images/Pianooooo/phone.png"
@@ -213,5 +222,6 @@
             </div>
         </div>
         <script src="js/app.min.js"></script>
+        <script src="js/loudlinks.min.js"></script>
     </body>
 </html>
