--- a/playground.html
+++ b/playground.html
@@ -62,7 +62,7 @@
           </div>
 
           <div class="expanded__media" style="width: 30%;">
-            <a href="https://pokemon-everyday.herokuapp.com/" target="_blank"><img class="landing_img" src="./images/playground/pokeball.png"></a>
+            <a href="https://pokemon-everyday.herokuapp.com/" target="_blank" class="loud-link-hover" data-sound="button2"><img class="landing_img" src="./images/playground/pokeball.png"></a>
           </div>
         </div>
       </div>
@@ -88,5 +88,6 @@
       </div>
     </div>
     <script src="js/app.min.js"></script>
+    <script src="js/loudlinks.min.js"></script>
   </body>
 </html>
