--- a/tiny.html
+++ b/tiny.html
@@ -46,17 +46,17 @@
             <a
               target="_blank"
               href="https://williamj-in.github.io/tiny/#/"
-              class="resume button button__primary"
+              class="resume button button__primary loud-link-hover"
               style="letter-spacing: 1px"
-              
+              data-sound="button2"
             >
             Try it out!
             </a>
             <a
               target="_blank"
               href="https://medium.com/@williamjinq/tiny-an-intuitive-minimal-and-beautiful-to-do-list-app-14aac376889b"
-              class="resume button button__primary secondary"
-              style="letter-spacing: 1px"
+              class="resume button button__primary secondary loud-link-hover"
+              style="letter-spacing: 1px" data-sound="button2"
             >
             More about process
             </a>
@@ -89,5 +89,6 @@
       </div>
     </div>
     <script src="js/app.min.js"></script>
+    <script src="js/loudlinks.min.js"></script>
   </body>
 </html>
