--- a/playground.html
+++ b/playground.html
@@ -67,6 +67,22 @@
         </div>
       </div>
     </div>
+    <div class="expanded landing__section" style="background-color: #f5f6f7;">
+      <div class="container" style="margin-top: 100px;">
+        <div class="expanded__inner">
+          <div class="expanded__content bio" style="width: 40%; margin: 100px 0">
+            <h1 class="expanded__title">Creativ <br><span>👩‍🎨</span></h1>
+            <p class="subtitle">Independent Project, 2020 (under developing)</p>
+            <p class="expanded__text">A react app allowing users to get design challenges and writing down notes for future references.</p>
+            
+          </div>
+
+          <div class="expanded__media" style="width: 60%; margin-left: 50px;">
+            <a href="https://williamj-in.github.io/design-challenge-generator/#/" target="_blank" class="loud-link-hover" data-sound="button2"><img class="landing_img" src="./images/playground/creativ.png"></a>
+          </div>
+        </div>
+      </div>
+    </div>
    
 
     
