--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <a href="tiny.html" class="loud-link-hover" data-sound="button2">
                             <img
                                 class="landing_img"
-                                src="./images/Tiny/title.png"
+                                src="./images/Tiny/title_new.png"
                                 width="100%"
                                 style="margin-left: 2rem;"
                             />
