--- a/tiny.html
+++ b/tiny.html
@@ -45,7 +45,7 @@
             <p class="expanded__text">An intuitive, minimal, and beautiful To-do List App helping users organize and categorize their personal to-dos.</p>
             <a
               target="_blank"
-              href="https://williamj-in.github.io/tiny/#/"
+              href="https://williamj-in.github.io/tiny-todo-list/#/"
               class="resume button button__primary loud-link-hover"
               style="letter-spacing: 1px"
               data-sound="button2"
@@ -63,7 +63,7 @@
           </div>
 
           <div class="expanded__media" style="width: 60%;">
-              <img  src="./images/Tiny/title.png" width="100%" style="margin-left: 2rem;" />
+              <img  src="./images/Tiny/title_new.png" width="100%" style="margin-left: 2rem;" />
           </div>
         </div>
       </div>
