--- a/Quenews.html
+++ b/Quenews.html
@@ -2,6 +2,7 @@
 <html lang='en'>
 
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Shanti&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <meta class="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
