--- a/index.html
+++ b/index.html
@@ -111,6 +111,31 @@
       </span>
     </div>
 
+    <div
+      class="expanded landing__section"
+      style="background-color: #f4f5f6; background-image: url(./images/VMware/89.png);"
+    >
+      <div class="container">
+        <div class="expanded__inner">
+          <div class="expanded__content bio">
+            <h1 class="expanded__title" style="color: #fff;">Internship @ VMware</h1>
+            <p class="subtitle" style="color: rgba(255, 255, 255, 0.5);">Internship, 2020</p>
+            <p class="expanded__text" style="color: #fff;">Two projects during my 12-week internship at VMware.</p>
+          </div>
+
+          <div class="expanded__media" style="">
+            <a href="#" class="loud-link-hover" data-sound="button3">
+              <img
+                class="landing_img"
+                src="./images/VMware/VMware Logo.png"
+                width="100%"
+                style="margin-top: 150px; margin-bottom: 150px;"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="expanded landing__section" style="background-color: #efeeee;">
       <div class="container" style="margin-top: 100px;">
         <div class="expanded__inner">
@@ -200,7 +225,7 @@
         </div>
       </div>
     </div>
-    <div
+    <!-- <div
       class="expanded landing__section"
       style="background-image: url('images/Pianooooo/0.jpg'); -webkit-background-size: cover;"
     >
@@ -219,7 +244,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="footer footer--dark">
       <div class="container">
