--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
     </div>
-    <div class="expanded landing__section" style="background-color: #f4f4f7 height: 100vh;">
+    <div class="expanded landing__section" style="background-color: #fafafa; height: 100vh;">
       <div class="container">
         <div class="expanded__inner">
           <div class="expanded__content" style="width: 80%;">
@@ -118,7 +118,7 @@
       <div class="container">
         <div class="expanded__inner">
           <div class="expanded__content bio">
-            <h1 class="expanded__title" style="color: #fff;">Internship @ VMware</h1>
+            <h1 class="expanded__title" style="color: #fff;">Product Design Internship @ VMware</h1>
             <p class="subtitle" style="color: rgba(255, 255, 255, 0.5);">Internship, 2020</p>
             <p class="expanded__text" style="color: #fff;">Two projects during my 12-week internship at VMware.</p>
           </div>
@@ -175,19 +175,24 @@
               class="loud-link-hover"
               data-sound="button3"
             >
-              <img class="landing_img" src="./images/Tiny/title_new.png" width="100%" style="margin-left: 5rem;" />
+              <img class="landing_img" src="./images/Tiny/title_new.png" width="100%" style="margin-left: 7rem;" />
             </a>
           </div>
         </div>
       </div>
     </div>
-    <div class="expanded landing__section" style="background-color: #fafafa;">
+    <div
+      class="expanded landing__section"
+      style="background-image: linear-gradient(to bottom right, #7775d3, #3d3ca5);"
+    >
       <div class="container">
         <div class="expanded__inner">
           <div class="expanded__content bio">
-            <h1 class="expanded__title">Quenews</h1>
-            <p class="subtitle">Group Project (2 people), 2019</p>
-            <p class="expanded__text">A queue-based news app to make commuters' life more meaningful.</p>
+            <h1 class="expanded__title" style="color: white;">Quenews</h1>
+            <p class="subtitle" style="color: rgba(255, 255, 255, 0.5);">Group Project (2 people), 2019</p>
+            <p class="expanded__text" style="color: white;">
+              A queue-based news app for commuters taking public transit to make their life more meaningful.
+            </p>
           </div>
 
           <div class="expanded__media">
@@ -205,7 +210,7 @@
       <div class="container">
         <div class="expanded__inner">
           <div class="expanded__content bio">
-            <h1 class="expanded__title" style="color: #ffffff;">IBM Product Design Intern</h1>
+            <h1 class="expanded__title" style="color: #ffffff;">Product Design Internship @ IBM</h1>
             <p class="subtitle" style="color: rgba(255, 255, 255, 0.5);">Feb - Jun 2019</p>
             <p class="expanded__text" style="color: #ffffff;">
               Several projects during my internship in IBM.
