--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="expanded__inner">
           <div class="expanded__content" style="width: 80%;">
             <div class="bio">
-              <p class="subtitle" style="margin-top: 100px;">William Jin | Product Innovator</p>
+              <p class="subtitle" style="margin-top: 15%;">William Jin | Product Innovator</p>
               <h1 style="font-size: 3.5rem; color: #303030; letter-spacing: 0px;">
                 <strong>Hi, I'm William 👨‍💻 !</strong>
                 <br />
