--- a/index.html
+++ b/index.html
@@ -118,20 +118,24 @@
       <div class="container">
         <div class="expanded__inner">
           <div class="expanded__content bio">
-            <h1 class="expanded__title" style="color: #fff;">Product Design Internship @ VMware</h1>
+            <h1 class="expanded__title" style="color: #fff; width: 80%;">
+              Product Design Internship @ VMware - Coming Soon!
+            </h1>
             <p class="subtitle" style="color: rgba(255, 255, 255, 0.5);">Internship, 2020</p>
-            <p class="expanded__text" style="color: #fff;">Two projects during my 12-week internship at VMware.</p>
+            <p class="expanded__text" style="color: #fff;">
+              Two projects during my 12-week internship at VMware - Comimg Soon!.
+            </p>
           </div>
 
           <div class="expanded__media" style="">
-            <a href="#" class="loud-link-hover" data-sound="button3">
-              <img
-                class="landing_img"
-                src="./images/VMware/VMware Logo.png"
-                width="100%"
-                style="margin-top: 150px; margin-bottom: 150px;"
-              />
-            </a>
+            <!-- <a href="#" class="loud-link-hover" data-sound="button3"> -->
+            <img
+              class="landing_img"
+              src="./images/VMware/VMware Logo.png"
+              width="100%"
+              style="margin-top: 150px; margin-bottom: 150px;"
+            />
+            <!-- </a> -->
           </div>
         </div>
       </div>
