--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Shanti&display=swap" rel="stylesheet" />
     <meta class="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -39,17 +39,24 @@
     <div class="expanded landing__section" style="background-color: #fafafa; height: 100vh;">
       <div class="container">
         <div class="expanded__inner">
-          <div class="expanded__content" style="width: 80%;">
+          <div class="expanded__content" style="width: 65%;">
             <div class="bio">
-              <p class="subtitle" style="margin-top: 20%;">William Jin | Product Innovator</p>
-              <h1 style="font-size: 3.5rem; color: #303030; letter-spacing: 0px;">
-                <strong>Hi, I'm William 👨‍💻 !</strong>
+              <h1 style="font-size: 3.6rem; color: #303030; line-height: 1; margin-top: 20%;">
+                <strong>Hi, I'm William !</strong>
                 <br />
-                <span style="font-size: smaller;">I design (almost) everything.</span>
+                <span style="font-size: 1.8rem; font-weight: 500;">I design (almost) everything.</span>
               </h1>
-              <div style="width: 80%;">
-                <p style="font-size: 20px; font-weight: lighter; line-height: 2.5;">
-                  I'm passionate about creating great products by combining ux, business and technology. You can view my
+              <div style="width: 100%;">
+                <p style="font-size: 1.35rem; font-weight: 400; line-height: 1.8;">
+                  <span style="color: teal;">Product Designer</span>
+                  @ Carnegie Mellon
+                  <br />
+                  Former intern at
+                  <span style="color: teal;">VMware, IBM, Tencent and Sinovation Ventures.</span>
+
+                  I'm passionate about creating great products by combining
+                  <span style="color: teal;">ux, business and technology.</span>
+                  <!-- . You can view my
                   <a href="playground.html" class="alink loud-link-hover" data-sound="button3">
                     <b>⚽ Playground</b>
                   </a>
@@ -71,7 +78,7 @@
                   >
                     <b>📧 Email</b>
                   </a>
-                  .
+                  . -->
                 </p>
               </div>
 
@@ -86,6 +93,14 @@
               </a>
             </div>
           </div>
+          <div class="expanded__media">
+            <img
+              src="./images/undraw_thought_process_67my 1.svg"
+              width="80%"
+              style="margin-left: -30%; margin-top: 20%;"
+            />
+          </div>
+          <div class="expanded__media"></div>
         </div>
       </div>
     </div>
