--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <div class="expanded__inner">
           <div class="expanded__content" style="width: 65%;">
             <div class="bio">
-              <h1 style="font-size: 3.6rem; color: #303030; line-height: 1; margin-top: 20%;">
+              <h1 style="font-size: 3.6rem; color: #303030; line-height: 1; margin-top: 25%;">
                 <strong>Hi, I'm William !</strong>
                 <br />
-                <span style="font-size: 1.8rem; font-weight: 500;">I design (almost) everything.</span>
+                <span style="font-size: 2rem; font-weight: 500;">I design (almost) everything.</span>
               </h1>
               <div style="width: 100%;">
-                <p style="font-size: 1.35rem; font-weight: 400; line-height: 1.8;">
+                <p class="expanded__text">
                   <span style="color: teal;">Product Designer</span>
                   @ Carnegie Mellon
                   <br />
@@ -133,12 +133,14 @@
       <div class="container">
         <div class="expanded__inner">
           <div class="expanded__content bio">
-            <h1 class="expanded__title" style="color: #fff; width: 80%;">
-              Product Design Internship @ VMware - Coming Soon!
+            <h1 class="expanded__title" style="color: #fff; max-width: 120%;">
+              Product Design Internship @ VMware
+              <br />
+              - Coming Soon!
             </h1>
             <p class="subtitle" style="color: rgba(255, 255, 255, 0.5);">Internship, 2020</p>
             <p class="expanded__text" style="color: #fff;">
-              Two projects during my 12-week internship at VMware - Comimg Soon!.
+              Two projects during my 12-week internship at VMware.
             </p>
           </div>
 
@@ -148,7 +150,7 @@
               class="landing_img"
               src="./images/VMware/VMware Logo.png"
               width="100%"
-              style="margin-top: 150px; margin-bottom: 150px;"
+              style="margin-top: 150px; margin-bottom: 150px; margin-left: 20px;"
             />
             <!-- </a> -->
           </div>
@@ -158,7 +160,7 @@
     <div class="expanded landing__section" style="background-color: #efeeee;">
       <div class="container" style="margin-top: 100px;">
         <div class="expanded__inner">
-          <div class="expanded__content bio" style="width: 40%;">
+          <div class="expanded__content bio" style="width: 45%;">
             <h1 class="expanded__title">Tiny</h1>
             <p class="subtitle">Independent Project, 2020</p>
             <p class="expanded__text">
@@ -187,7 +189,7 @@
             </div>
           </div>
 
-          <div class="expanded__media" style="width: 60%;">
+          <div class="expanded__media" style="width: 55%;">
             <a
               href="https://williamj-in.github.io/tiny-todo-list/#/"
               target="blank"
