--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               class="landing_img"
               src="./images/VMware/VMware Logo.png"
               width="100%"
-              style="margin-top: 150px; margin-bottom: 150px; margin-left: 20px;"
+              style="margin-top: 250px; margin-bottom: 250px; margin-left: 20px;"
             />
             <!-- </a> -->
           </div>
@@ -167,7 +167,7 @@
               An intuitive, minimal, and beautiful To-do List App helping users organize and categorize their personal
               to-dos.
             </p>
-            <div style="display: flex;">
+            <div style="display: flex; margin-bottom: 100px;">
               <a
                 target="_blank"
                 href="https://williamj-in.github.io/tiny-todo-list/#/"
