--- a/index.html
+++ b/index.html
@@ -135,8 +135,6 @@
           <div class="expanded__content bio">
             <h1 class="expanded__title" style="color: #fff; max-width: 120%;">
               Product Design Internship @ VMware
-              <br />
-              - Coming Soon!
             </h1>
             <p class="subtitle" style="color: rgba(255, 255, 255, 0.5);">Internship, 2020</p>
             <p class="expanded__text" style="color: #fff;">
@@ -145,14 +143,19 @@
           </div>
 
           <div class="expanded__media" style="">
-            <!-- <a href="#" class="loud-link-hover" data-sound="button3"> -->
-            <img
-              class="landing_img"
-              src="./images/VMware/VMware Logo.png"
-              width="100%"
-              style="margin-top: 250px; margin-bottom: 250px; margin-left: 20px;"
-            />
-            <!-- </a> -->
+            <a
+              href="https://www.figma.com/proto/8Xp4Lz4rBx2HqWwu6sqCKx/Internship-Presentation?node-id=4%3A0&viewport=457%2C261%2C0.1459026038646698&scaling=min-zoom"
+              class="loud-link-hover"
+              data-sound="button3"
+              target="_blank"
+            >
+              <img
+                class="landing_img"
+                src="./images/VMware/VMware Logo.png"
+                width="100%"
+                style="margin-top: 250px; margin-bottom: 250px; margin-left: 20px;"
+              />
+            </a>
           </div>
         </div>
       </div>
